updates and new concepts added